Add Topics with mechanisms to add them

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -1,1 +1,11 @@
 /* This file is for your main application css. */
+
+.help-block {
+    color: red;
+    text-transform: capitalize;
+}
+
+.form-group {
+    position: relative;
+    margin-bottom: 25px;
+}
