--- a/web/templates/topic/index.html.eex
+++ b/web/templates/topic/index.html.eex
@@ -1,7 +1,12 @@
 <h5>Topics</h5>
 <ul class="collection">
   <%= for topic <- @topics do %>
-    <li class="collection-item"><%= topic.title %></li>
+    <li class="collection-item">
+      <%= topic.title %>
+      <div class="right">
+        <%= link "Edit", to: topic_path(@conn, :edit, topic) %>
+      </div>
+    </li>
   <% end %>
 </ul>
 
