--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -19,6 +19,15 @@
         <a href="/" class="brand-logo">
           Discussions
         </a>
+        <ul class="right">
+          <%= if @conn.assigns[:user] do %>
+            <li>
+              <%= link "Logout", to: auth_path(@conn, :signout) %>
+            </li>
+          <% else %>
+            <li><%= link "Sign in with Github", to: auth_path(@conn, :request, "github") %></li>
+          <% end %>
+        </ul>
       </div>
     </nav>
 
